syntax = "proto3";

package filetransfer;


service FileTransferService {
  rpc DownloadFile (FileRequest) returns (stream FileChunk);
}

message FileRequest {
  string file_name = 1;
  int64 offset = 2;
}

message FileChunk {
  bytes data = 1;
  int64 chunk_number = 2;
  bool eof = 3;
}
